# gr_bot

./: .env.example  .gitignore  bot.py  db.py  get_book_info.py  hello.py  main.py  pyproject.toml  test_bot.py
tests/: extract_book_and_author.py  extract_books.py
utils/: analytics.py  book_matcher.py  formatter.py  helpers.py
